fix(selectric): add z-index
https://jira.railsc.ru/browse/PC4-26911

--- a/src/blocks/common/selectric/selectric.css
+++ b/src/blocks/common/selectric/selectric.css
@@ -1,5 +1,7 @@
 .aui-selectric .selectric { background: #fff; }
 
+.aui-selectric .selectric-open { z-index: 1; }
+
 .aui-selectric .selectric,
 .aui-selectric .selectric-hover .selectric,
 .aui-selectric .selectric-focus .selectric,
